tests/compile-fail/integration_suite__integration__general__compile_string_arg_too_big_eq.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: string argument too large for buffer
   ┌─ <input>:10:11
   │
10 │     fixed("abcdefgh");
   │           ^^^^^^^^^^ requires 9 bytes
   │
   = this argument is written to a 8-byte buffer


